Fixes nav breaking to two lines on mobile

--- a/source/stylesheets/partials/_nav.scss
+++ b/source/stylesheets/partials/_nav.scss
@@ -28,7 +28,7 @@
     }
 
     @media (max-width: 600px) {
-      padding-right: 1.1em;
+      padding-right: .8em;
     }
   }
 
@@ -67,7 +67,7 @@
   }
 
   @media (max-width: 400px) {
-    font-size: 1.5em;
+    font-size: 1.2em;
   }
 }
 
